@@ -21,6 +21,7 @@
  - replaced index.html by index.php (goffy)
  - added replacement of tabs by 4 spaces in devtools (goffy)
  - fixed bug with unnecessary index.php files adex by index_scan (mjoel/goffy)
+ - fixed bug if no permissions are used (goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
